# Course_work_SQL

./: .gitignore  README  pyproject.toml
src/: DBManager.py  main.py  utils.py
